--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -67,3 +67,74 @@
   max-width: 270px;
   border-radius: 10px;
 }
+
+@media screen and (max-width: 1050px) {
+  .about-me__container {
+    padding: 90px 50px;
+  }
+
+  .about-me__wrapper {
+    gap: 70px;
+  }
+
+  .about-me__title {
+    margin-bottom: 16px;
+    font-size: 40px;
+    line-height: 40px;
+  }
+
+  .about-me__subtitle {
+    margin-bottom: 20px;
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .about-me__text {
+    font-size: 12px;
+    line-height: 18px;
+  }
+
+  .about-me__photo {
+    max-width: 255px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .about-me__wrapper {
+    gap: 49px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-me__container {
+    padding: 70px 14px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .about-me__wrapper {
+    flex-direction: column-reverse;
+    gap: 40px;
+  }
+
+  .about-me__title {
+    margin-bottom: 20px;
+    font-size: 30px;
+    line-height: 36px;
+  }
+
+  .about-me__subtitle {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .about-me__text {
+    font-size: 11px;
+    line-height: 16px;
+    margin-bottom: 40px;
+  }
+
+  .about-me__photo {
+    max-width: 292px;
+  }
+}
