--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -11,7 +11,6 @@
   display: flex;
   align-items: center;
   margin-bottom: 110px;
-  padding-top: 4px;
 }
 
 .about-project__article {
@@ -70,4 +69,45 @@
 .about-project__timeline-item_background_grey {
   background-color: #303030;
   color: #fff;
+}
+
+@media screen and (max-width: 800px) {
+  .about-project__container {
+    padding: 110px 50px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .about-project__container {
+    padding: 70px 18px;
+  }
+
+  .about-project__description {
+    flex-direction: column;
+  }
+
+  .about-project__article {
+    margin-right: 0;
+    margin-bottom: 56px;
+  }
+
+  .about-project__article:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .about-project__article-title {
+    font-size: 18px;
+    line-height: 22px;
+    margin-bottom: 16px;
+  }
+
+  .about-project__article-text {
+    font-size: 11px;
+    line-height: 16px;
+  }
+
+  .about-project__timeline-item {
+    font-size: 11px;
+    line-height: 13px;
+  }
 }
