--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -36,8 +36,12 @@
   color: #ffffff;
 }
 
+.form__input:focus {
+  border-color: #fff;
+}
+
 .form__error {
-  display: none;
+  display: block;
   font-style: normal;
   font-weight: 400;
   font-size: 10px;
@@ -45,18 +49,23 @@
   color: #ee3465;
 }
 
-.form__input:invalid {
-  color: #ee3465;
+.form__error_active {
+  display: block;
+}
+
+.form__wrapper {
+  width: 396px;
+  position: absolute;
+  bottom: 70px;
 }
 
 .form__btn {
-  margin-top: 134px;
   width: 100%;
   border: none;
   outline: none;
   background-color: #4285f4;
   border-radius: 3px;
-  padding-top: 13px;
+  padding-top: 15px;
   padding-bottom: 15px;
   font-style: normal;
   font-weight: 500;
@@ -75,6 +84,11 @@
 .form__btn:disabled {
   background-color: #f8f8f8;
   color: #c2c2c2;
+  cursor: default;
+}
+
+.form__btn:disabled:hover {
+  opacity: 1;
 }
 
 .form__btn:hover {
@@ -106,4 +120,25 @@
 
 .form__link:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 550px) {
+  .form__wrapper {
+    max-width: 260px;
+  }
+
+  .form__btn {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .form__text {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .form__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
 }
