--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,5 +1,6 @@
 .movies-card-list__container {
   padding-bottom: 80px;
+  padding-top: 70px;
 }
 
 .movies-card-list__container_saved-movies {
@@ -50,4 +51,33 @@
 
 .movies-card-list__btn:hover {
   opacity: 0.7;
+}
+
+@media screen and (max-width: 1220px) {
+  .movies-card-list__list {
+    row-gap: 45px;
+    justify-content: space-evenly;
+  }
+
+  .movies-card-list__container_saved-movies {
+    padding-bottom: 140px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .movies-card-list__list {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 690px) {
+  .movies-card-list__list {
+    justify-content: center;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .movies-card-list__container {
+    padding-top: 40px;
+  }
 }
