--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -54,3 +54,20 @@
   opacity: 0.7;
   transform: scale(1.1);
 }
+
+@media screen and (max-width: 550px) {
+  .not-found__title {
+    font-size: 80px;
+    line-height: 97px;
+  }
+
+  .not-found__text {
+    font-size: 12px;
+    line-height: 15px;
+  }
+
+  .not-found__btn {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
