--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -3,12 +3,13 @@
 }
 
 .profile__container {
-  height: calc(100vh - 148px);
+  height: calc(100vh - 74px);
   padding-top: 74px;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
+  position: relative;
 }
 
 .profile__title {
@@ -75,6 +76,13 @@
   color: #ee3465;
 }
 
+.profile__btn-container {
+  display: flex;
+  flex-direction: column;
+  position: absolute;
+  bottom: 70px;
+}
+
 .profile__btn-edit {
   border: none;
   outline: none;
@@ -85,7 +93,6 @@
   line-height: 16px;
   text-align: center;
   color: #fff;
-  margin-top: 220px;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
 }
@@ -123,4 +130,28 @@
 .profile__btn-logout:hover {
   opacity: 0.7;
   transform: scale(1.1);
+}
+
+@media screen and (max-width: 800px) {
+  .profile__container {
+    padding-top: 236px;
+  }
+
+  .profile__title {
+    margin-bottom: 96px;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .profile__title {
+    margin-bottom: 80px;
+  }
+
+  .profile__container {
+    padding-top: 70px;
+  }
+
+  .profile__form {
+    max-width: 260px;
+  }
 }
