--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -30,3 +30,15 @@
   opacity: 0.7;
   transform: rotate(75deg);
 }
+
+@media screen and (max-width: 550px) {
+  .register__container {
+    max-width: 260px;
+    align-items: center;
+    padding: 56px 0 0;
+  }
+
+  .register__title {
+    margin: 50px 0 80px;
+  }
+}
