--- a/src/components/SectionTitle/SectionTitle.css
+++ b/src/components/SectionTitle/SectionTitle.css
@@ -7,5 +7,20 @@
   letter-spacing: -0.04em;
   border-bottom: 1px solid #dadada;
   padding-bottom: 23px;
-  margin-bottom: 66px;
+  margin-bottom: 90px;
+}
+
+@media screen and (max-width: 800px) {
+  .section-title {
+    margin-bottom: 80px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .section-title {
+    font-size: 18px;
+    line-height: 22px;
+    padding-bottom: 28px;
+    margin-bottom: 60px;
+  }
 }
