--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -103,6 +103,10 @@
 }
 
 @media screen and (max-width: 450px) {
+  .techs {
+    background-color: #202020;
+  }
+
   .techs__list {
     max-width: 178px;
   }
