--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -122,6 +122,19 @@
   opacity: 0.7;
 }
 
+.form__submit-error {
+  display: block;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 18px;
+  text-align: center;
+  color: rgb(245, 81, 81);
+  width: 100%;
+  min-height: 16px;
+  margin-bottom: 15px;
+}
+
 @media screen and (max-width: 550px) {
   .form__wrapper {
     max-width: 260px;
